[gd_scene load_steps=7 format=2]

[ext_resource path="res://flappy-bird-assets-master/sprites/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://Pipes.gd" type="Script" id=2]
[ext_resource path="res://flappy-bird-assets-master/audio/point.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 160 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 160 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 50 )

[node name="Pipes" type="Position2D" groups=[
"Pipe",
]]
position = Vector2( 350, 200 )
script = ExtResource( 2 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="PipeTop" type="Area2D" parent="."]
position = Vector2( 0, -210 )
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="PipeTop"]
rotation = -3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeTop"]
shape = SubResource( 1 )

[node name="PipeBottom" type="Area2D" parent="."]
position = Vector2( 0, 210 )
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="PipeBottom"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeBottom"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.296364, 0.965457 )
scale = Vector2( 2.96018, 37.4303 )

[node name="ScoreCollider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreCollider"]
shape = SubResource( 3 )

[node name="ScoreAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="PipeTop" to="." method="_on_Pipe_body_entered"]
[connection signal="body_entered" from="PipeBottom" to="." method="_on_Pipe_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="ScoreCollider" to="." method="_on_ScoreCollider_body_entered"]
